--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -1,10 +1,3 @@
-<h1>New Student</h1>
-<%= form_tag students_path do %>
-  <label>First name</label><br>
-  <%= text_field_tag :'student[first_name]' %><br>
+<%= render "form" %>
 
-  <label>Last name</label><br>
-  <%= text_field_tag :'student[last_name]' %><br>
-
-  <%= submit_tag "Submit student" %>
-<% end %>
+<%= session[:form_params] if session[:form_params] %>
